--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<mssql.driver.version>1.3.1</mssql.driver.version>
 	    
 		<!-- environment setting -->
-		<jdk.version>1.6</jdk.version>
+		<jdk.version>1.7</jdk.version>
 		<tomcat.version>2.2</tomcat.version>
 		<jetty.version>7.6.14.v20131031</jetty.version>
 		<webserver.port>8181</webserver.port>
@@ -59,8 +59,18 @@
 	
 	<!-- 设定主仓库，按设定顺序进行查找。 -->
 	<repositories>
-	
+
 		<repository>
+		<releases>
+			<enabled>false</enabled>
+			<updatePolicy>always</updatePolicy>
+			<checksumPolicy>warn</checksumPolicy>
+		</releases>
+		<snapshots>
+			<enabled>true</enabled>
+			<updatePolicy>never</updatePolicy>
+			<checksumPolicy>fail</checksumPolicy>
+		</snapshots>
 			<id>jeesite-repos</id>
 			<name>Jeesite Repository</name>
 			<url>http://maven.aliyun.com/nexus/content/groups/public</url>
@@ -69,7 +79,7 @@
 	</repositories>
 	
 	<!-- 设定插件仓库 -->
-	<pluginRepositories> 
+	<pluginRepositories>
 	
 		<pluginRepository>
 			<id>jeesite-repos</id>
@@ -77,7 +87,7 @@
 			<url>http://maven.aliyun.com/nexus/content/groups/public</url>
 		</pluginRepository>
 		
-	</pluginRepositories> 
+	</pluginRepositories>
 	
 	<!-- 依赖项定义 -->
 	<dependencies>
